--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,19 +117,28 @@ section {
 }
 /* Hero Style End */
 
-/* What We Do section */
-.intro {
-  text-align: center;
-}
-
-.intro h2 {
+/* combined sections' classes */
+.section-tittle {
   font-size: 55px;
   color: #024e76;
   margin-bottom: 35px;
   padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #fce138;
   display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+/* combined sections' end */
+
+/* What We Do section */
+.intro {
+  text-align: center;
 }
 
 .intro p {
@@ -140,3 +149,34 @@ section {
   margin: 0 auto;
 }
 /* What We Do end */
+
+/* What You Do section */
+.steps {
+  text-align: center;
+  background: #fce138;
+}
+
+.steps div {
+  margin-bottom: 80px;
+}
+
+.steps img {
+  width: 15%;
+  margin: 10px 0;
+}
+
+.steps h3 {
+  color: #024e76;
+  font-size: 46px;
+  margin-top: 10px;
+}
+
+.steps p {
+  color: #39a6b2;
+  font-size: 23px;
+}
+
+.steps span {
+  font-size: 38px;
+}
+/* What You Do end */
