--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /* It's a good habit to first write CSS styles that apply to the whole page */
+/* Whole Page Style */
 * {
   margin: 0;
   padding: 0;
@@ -69,6 +70,7 @@ footer a {
 section {
   padding: 60px;
 }
+/* Whole Page Style END*/
 
 /* Hero Style Start */
 .hero {
@@ -115,7 +117,7 @@ section {
   padding: 10px 20px;
   font-size: 16px;
 }
-/* Hero Style End */
+/* Hero Style END */
 
 /* combined sections' classes */
 .section-tittle {
@@ -134,7 +136,15 @@ section {
 .secondary-border {
   border-color: #39a6b2;
 }
-/* combined sections' end */
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+/* combined sections' END */
 
 /* What We Do section */
 .intro {
@@ -148,7 +158,7 @@ section {
   font-size: 20px;
   margin: 0 auto;
 }
-/* What We Do end */
+/* What We Do END */
 
 /* What You Do section */
 .steps {
@@ -179,4 +189,44 @@ section {
 .steps span {
   font-size: 38px;
 }
-/* What You Do end */
+/* What You Do END */
+
+/* Your Trainers Section */
+.trainers {
+  text-align: center;
+}
+
+.trainer {
+  width: 900px;
+  margin: 0 auto 30px auto;
+  background: #024e76;
+  color: #fce138;
+  overflow: auto;
+}
+
+.trainer img {
+  width: 35%;
+  float: left;
+}
+
+.trainer-bio {
+  padding: 35px;
+  float: left;
+  width: 65%;
+}
+
+.trainer-bio h3 {
+  font-size: 32px;
+  margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+  font-size: 26px;
+  margin-bottom: 25px;
+}
+
+.trainer-bio p {
+  font-size: 17px;
+  line-height: 1.3;
+}
+/* Your Trainers END */
